<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--Application-->
    <string name="app_name">Avtopoisk</string>
    <string name="dlg_progress_data_loading">Loading…</string>
    <string name="any">Any</string>
    <string name="all">All</string>
    <string name="any2">Any</string>
    <string name="error">Error</string>

    <!--error data loading dialog-->
    <string name="error_dlg_text">Error while loading data. Repeat request?</string>
    <string name="error_dlg_yes">Yes</string>
    <string name="error_dlg_no">No</string>
    <!--/error data loading dialog-->
    <!--/Application-->

    <!--SearchResultActivity-->
    <string name="btn_find_text">Find</string>
    <string name="brand_hint_text">Brand:</string>
    <string name="model_hint_text">Model:</string>
    <string name="region_hint_text">Region:</string>
    <string name="year_section_hint_text">Year:</string>
    <string name="brands_prompt">Select brand</string>
    <string name="models_prompt">Select model</string>
    <string name="regions_prompt">Select region</string>
    <string name="year_prompt">Select year</string>
    <string name="price_prompt">Select price</string>
    <string name="from_hint">From:</string>
    <string name="to_hint">To:</string>
    <string name="price_section_hint_text">Price:</string>
    <string name="sort_hint">Sort by:</string>
    <string name="body_type_hint">Body type:</string>
    <string name="added_type_hint">Added:</string>
    <!--/SearchActivity-->

    <!--SearchResultActivity-->
    <string name="car_photo_description">Car photo</string>
    <string name="load_ten_more">Load next 10 results</string>
    <string name="loaded_count_text">Loaded %1$d from %2$d</string>
    <!--menu-->
    <string name="sort_text">Sort</string>
    <string name="sort_by_date_text">Sort by year</string>
    <string name="sort_by_year_desc_text">Sort by year (desc)</string>
    <string name="sort_by_year_inc_text">Sort by year</string>
    <string name="sort_by_price_desc_text">Sort by price (desc)</string>
    <string name="sort_by_price_inc_text">Sort by price</string>
    <!--/menu-->
    <!--/SearchResultActivity-->

    <!--SplashScreenActivity-->
    <string name="splash_error_text">Error while loading data. Restart application</string>
    <!--/SplashScreenActivity-->
</resources>
